// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot test for the "UIBadge" component renders correctly a positive number 1`] = `
<View
  style={
    {
      "position": "relative",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#e30000",
        "borderRadius": 20,
        "justifyContent": "center",
        "minHeight": 20,
        "minWidth": 20,
        "padding": 5,
        "position": "absolute",
        "right": -15,
        "top": -7.5,
        "zIndex": 1,
      }
    }
  >
    <Text
      style={
        {
          "color": "#ffffff",
          "fontSize": 9.832647462277093,
          "fontWeight": "700",
          "textAlign": "center",
        }
      }
    >
      10
    </Text>
  </View>
  <Text
    style={
      [
        {
          "color": "#000000",
          "fontSize": 14,
          "fontWeight": "200",
        },
        {
          "marginBottom": 8,
          "marginTop": 8,
          "paddingBottom": 6,
          "paddingTop": 6,
        },
        undefined,
        undefined,
        undefined,
      ]
    }
  >
    Text
  </Text>
</View>
`;

exports[`Snapshot test for the "UIBadge" component renders correctly with a negative number 1`] = `
<View
  style={
    {
      "position": "relative",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#e30000",
        "borderRadius": 20,
        "justifyContent": "center",
        "minHeight": 20,
        "minWidth": 20,
        "padding": 5,
        "position": "absolute",
        "right": -15,
        "top": -7.5,
        "zIndex": 1,
      }
    }
  >
    <Text
      style={
        {
          "color": "#ffffff",
          "fontSize": 9.832647462277093,
          "fontWeight": "700",
          "textAlign": "center",
        }
      }
    >
      -10
    </Text>
  </View>
  <Text
    style={
      [
        {
          "color": "#000000",
          "fontSize": 14,
          "fontWeight": "200",
        },
        {
          "marginBottom": 8,
          "marginTop": 8,
          "paddingBottom": 6,
          "paddingTop": 6,
        },
        undefined,
        undefined,
        undefined,
      ]
    }
  >
    Text
  </Text>
</View>
`;

exports[`Snapshot test for the "UIBadge" component renders correctly with zero 1`] = `
<View
  style={
    {
      "position": "relative",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#e30000",
        "borderRadius": 20,
        "justifyContent": "center",
        "minHeight": 20,
        "minWidth": 20,
        "padding": 5,
        "position": "absolute",
        "right": -15,
        "top": -7.5,
        "zIndex": 1,
      }
    }
  >
    <Text
      style={
        {
          "color": "#ffffff",
          "fontSize": 9.832647462277093,
          "fontWeight": "700",
          "textAlign": "center",
        }
      }
    >
      0
    </Text>
  </View>
  <Text
    style={
      [
        {
          "color": "#000000",
          "fontSize": 14,
          "fontWeight": "200",
        },
        {
          "marginBottom": 8,
          "marginTop": 8,
          "paddingBottom": 6,
          "paddingTop": 6,
        },
        undefined,
        undefined,
        undefined,
      ]
    }
  >
    Text
  </Text>
</View>
`;

exports[`Snapshot test for the "UIBadge" component renders correctly without a negative number 1`] = `
<View
  style={
    {
      "position": "relative",
    }
  }
>
  <Text
    style={
      [
        {
          "color": "#000000",
          "fontSize": 14,
          "fontWeight": "200",
        },
        {
          "marginBottom": 8,
          "marginTop": 8,
          "paddingBottom": 6,
          "paddingTop": 6,
        },
        undefined,
        undefined,
        undefined,
      ]
    }
  >
    Text
  </Text>
</View>
`;

exports[`Snapshot test for the "UIBadge" component renders correctly without zero 1`] = `
<View
  style={
    {
      "position": "relative",
    }
  }
>
  <Text
    style={
      [
        {
          "color": "#000000",
          "fontSize": 14,
          "fontWeight": "200",
        },
        {
          "marginBottom": 8,
          "marginTop": 8,
          "paddingBottom": 6,
          "paddingTop": 6,
        },
        undefined,
        undefined,
        undefined,
      ]
    }
  >
    Text
  </Text>
</View>
`;
